--- a/lianpeng/templates/_footer.html
+++ b/lianpeng/templates/_footer.html
@@ -6,7 +6,7 @@
     <div class="span3 pull-right">
         <div class="pull-right">
         <a href="/about/">关于</a>
-        · <a href="http://lianpeng.duapp.com/" target="_blank">博客</a>
+        · <a href="http://blog.lianpeng.me/" target="_blank">博客</a>
         </div>
     </div>
 </div>
