--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -61,6 +61,7 @@
 {% block extra_script %}
 <script type="text/javascript" src="{{ STATIC_URL }}js/underscore-min.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/backbone-min.js" charset="utf-8"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.atwho.js" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
     var USER_ID = {{user.id}};
     var USER_URL = "/api/v1/user/" + USER_ID;
