--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -397,6 +397,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/top.js"></script>
 <!-- You can add more layouts if you want -->
 <script type="text/javascript" src="{{ STATIC_URL }}js/noty/themes/default.js" charset="utf-8"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.atwho.js" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
     var USER_ID = {{user.id}};
     var USER_URL = "/api/v1/user/" + USER_ID;
