--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -294,7 +294,7 @@
                                     <%}%>
                                     <div class="row-fluid muted">
                                         <div class="span12">
-                                            <img src="http://g.etfv.co/http://<%- bookmark.domain %>" width="16"/>&nbsp;<%- bookmark.domain %>
+                                            <a href="/list/domain/<%- bookmark.domain %>/" target="_blank" class="muted"><img src="http://g.etfv.co/http://<%- bookmark.domain %>" width="16"/>&nbsp;<%- bookmark.domain %>
                                             &nbsp;
                                             <a href="/<%-bookmark.user_name%>" target="_blank" class="muted">
                                                 <i class="icon-user"></i>&nbsp;<%-bookmark.user_name%>
