support github starred project syncing

--- a/lianpeng/templates/account/_signup_sidebar.html
+++ b/lianpeng/templates/account/_signup_sidebar.html
@@ -14,4 +14,10 @@
             使用Google帐号登录
         </a>
     </li>
+    <li>
+        <a href="{% url socialauth_begin 'github' %}">
+            <img src="https://github.com/fluidicon.png" width="16" />
+            使用Github帐号登录
+        </a>
+    </li>
 </ul>
