--- a/lianpeng/templates/_account_bar.html
+++ b/lianpeng/templates/_account_bar.html
@@ -22,7 +22,7 @@
 <ul class="nav pull-right">
     {% if request.user.is_authenticated %}
         {% notifications_unread as unread_count %}
-        <li><a href="#feedback" data-toggle="modal">{% trans "Feedback" %}</a></li>
+        <li><a href="{% url bookmark_sync %}">{% trans "Sync" %}</a></li>
         <li><a href="{% url help %}" data-toggle="modal">{% trans "Help" %}</a></li>
         <li>
             <a href="{% url notifications:mark_all_as_read %}">{% trans "Notifications" %} 
@@ -37,13 +37,17 @@
             </a>
             <ul class="dropdown-menu">
                 <li><a href="{% url bookmark_profile user.username %}"><i class="icon-home"></i> {% trans "My public page" %}</a></li>
-                <li><a href="{% url profile_edit%}"><i class="icon-user"></i> {% trans "Update my profile" %}</a></li>
+                <li><a href="{% url profile_edit %}"><i class="icon-user"></i> {% trans "Update my profile" %}</a></li>
                 <li><a href="{% url account_settings %}"><i class="icon-cog"></i> {% trans "Settings" %}</a></li>
+                <li><a href="{% url bookmark_sync %}"><i class="icon-refresh"></i> {% trans "Sync" %}</a></li>
                 <li><a href="{% url bookmark_import %}"><i class="icon-signin"></i> {% trans "Import" %}</a></li>
                 <li class="divider"></li>
                 {% if user.is_staff %}
                 <li><a href="/admin/" target="_blank"><i class="icon-wrench"></i> {% trans "Admin" %}</a></li>
                 {% endif %}
+                <li><a href="{% url help %}" data-toggle="modal"><i class="icon-question-sign"></i> {% trans "Help" %}</a></li>
+                <li><a href="#feedback" data-toggle="modal"><i class="icon-comment"></i> {% trans "Feedback" %}</a></li>
+                <li class="divider"></li>
                 <li><a href="{% url account_logout %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
             </ul>
         </li>
