--- a/lianpeng/site_media/static/less/bookmark.less
+++ b/lianpeng/site_media/static/less/bookmark.less
@@ -1,14 +1,61 @@
 @import "bootstrap.less";
-@orange: #ff725b;
-@orangeHighlight:     spin(@orange, 20%);
+@orange: #f47c39;
+@orangeHighlight: spin(@orange, 5%);
+@green: #4FCCBF; /*#42D7B4*/
+@greenHighlight: spin(@green, 20%);
 @bluegray: #8C9CAF;
-@linkColor: @orange;
+@linkColor: @green;
+@btnBackground: @white;
+@btnBackgroundHighlight: darken(@white, 5%);
+@formActionsBackground: @white;
+@heroUnitBackground: @white;
 body {
     padding-top:60px;
-    /* background: url(../img/bg-noise.gif) */
+    /* background: url(../img/bg-noise.gif);*/
+    background:#F8F8F3;
+}
+.btn {
+    .box-shadow(0 0 0 rgba(0,0,0,0));
+    text-shadow:none;
+    background-image:none;
+    .transition(none);
+    &:hover {
+        .transition(none);
+    }
+}
+.hero-unit {
+    border:1px solid #eee;
+}
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+.uneditable-input {
+    .box-shadow(0 0 0 rgba(0,0,0,0));
+    &:focus {
+        border-color: @green;
+        @shadow: 0 0 6px lighten(@green, 1%);
+        .box-shadow(none);
+    }
 }
 .btn-primary {
-  .buttonBackground(@orange, @orange);
+    .buttonBackground(@orange, @orange);
+    &:hover {
+    .buttonBackground(@orangeHighlight, @orangeHighlight);
+    }
+    border-bottom-color: #bd4a0a;
+    border-bottom-width: 3px;
 }
 .label {
   &-tag           { background-color: @bluegray; }
@@ -16,40 +63,107 @@ body {
 }
 a {
     &:hover {
-        color:@orange;
+        color:@green;
         text-decoration:none;
     }
     color: @black;
 }
+.navbar-fixed-top {
+    .navbar-inner {
+        border-top: 4px @green solid;
+        border-bottom: #ddd 1px solid;
+        #gradient > .vertical(@white, @white);
+        .box-shadow(0 1px 4px rgba(0,0,0,.065));
+        .avatar-nav {
+            padding:4px 4px 4px 8px;
+            .caret {
+                margin-top:12px;
+            }
+            .avatar {
+                margin-right:0;
+            }
+        }
+    }
+    &.navbar .nav>li>a {
+        border: solid #ddd;
+        border-width: 0 0 0 1px;
+    }
+}
 .sidebar-nav-fixed {
     position:fixed;
 }
+.sidebar-nav-fixed  .signature, .bookmarks #lists, #profile .tab-pane .signature, .bookmark-detail .signature {
+    overflow:hidden;
+    white-space:nowrap;
+    display:block;
+}
 #bookmarks {
     margin-top:10px;
-    min-height:400px;
     .list-header {
         h2 {
             margin:0;
             margin-bottom:10px;
         }
     }   
+    #invitee-list {
+        select {
+            &.permission {
+                height:25px;
+            }
+            margin:0;
+            width:auto;
+            display:block;
+        }
+    }
+
 }
-.bookmarks .list, #explore .bookmarks{
+#user-home #bookmarks {
+    min-height:400px;
+    .add-bookmark-form-box {
+        input.url {
+            height:32px;
+            line-height: 16px;
+        }
+    }
+}
+
+.bookmarks .list, #explore .bookmarks, .bookmark-detail, #profile #bookmarks {
     hr {
         margin:15px 0;
+    }
+    .comments-box {
+        margin-top:10px;
+        .comments {
+            hr {
+                margin:0px 0 10px 0;
+                border-top: 1px dotted #ddd;
+                border-bottom: 1px dotted #ffffff;
+            }
+        }
     }
     .bookmark-title-box {
         padding-bottom:1px;
 
         .actions {
+            ul.well-small {
+                padding:0 8px;
+                padding-right:12px;
+                li {
+                    padding:5px;
+                }
+            }
             span {
                 cursor:pointer;
             }
+            position: absolute;
+            right: 0px;
+            width:200px;
+            z-index:20;
         }
         a.bookmark-title {
             color: @grayDarker;
             &:hover {
-                color: @orange;
+                color: @green;
             }
             overflow:hidden;
             white-space:nowrap;
@@ -72,7 +186,6 @@ a {
             margin-bottom:0;
         }
     }
-
 }
 
 #bookmarklet-box:hover {
@@ -81,49 +194,51 @@ a {
     }
 }
 #bookmarklet-box #arrow {
-    background: url(../img/arrow.png) no-repeat 38px 0;
-    width: 250px;
+    background: url(../img/arrow.png) no-repeat 38px 5px;
+    width: 230px;   
     height: 150px;
     position: absolute;
     top: 0;
     z-index: 1000000;
+    left:62%;
 }
 
 #explore {
-    a.bookmark-link {
-        color: #333;
-        margin-top:8px;
-    }
-    .list {
-        min-height:200px;
-        display: block;
-        cursor: pointer;
-        margin:36px 0;
-        .avatar {
-            margin-top:2px;
-        }
-    }
     .page-header {
         margin:0 0 20px;
     }
     .bookmarks hr {
     }
-        ul.filters.nav {
-            text-align:center;
-            li {
-                display:inline-block;
-                float:none;
-            }
+    ul.filters.nav {
+        li {
+            display:inline-block;
+            float:none;
         }
+        margin-top:20px;
+    }
 }
 
+.box.list {
+    min-height:200px;
+    height:200px;
+    display: block;
+    cursor: pointer;
+    margin:36px 0;
+    .avatar {
+        margin-top:2px;
+    }
+    a.bookmark-link  no-repeat{
+        color: #333;
+        margin-top:8px;
+    }
+}
 #lists {
     .nav {
         margin-bottom:0;
     }
     .nav > li > a,
     {
-      border-left:4px solid @white;
+      border-left:4px solid transparent;
       padding:3px 5px;
     }
     .nav > .active > a > [class*=" icon-"] {
@@ -134,17 +249,42 @@ a {
     .nav > li > a:hover,
     .nav > .active > a:hover {
       color: @gray;
-      border-left:4px solid @orange;
-      background-color:#f8f8f8;
+      border-left:4px solid @green;
       text-shadow:none;
     }
     .nav > li > a:hover {
       border-left:4px solid #888;
     }
-    .user-lists {
+    .user-lists, .sys-lists {
         overflow:auto;
+        .list-name {
+            .row-fluid [class*="span"] {
+                min-height:1px;
+            }
+            position:relative;
+            .name-text {
+                display: inline-block;
+                vertical-align:top;
+            }
+            .icon {
+                margin-top:3px;
+                &.icon-shared-list {
+                    padding-left:2px;
+                }
+            }
+            .count {
+                position:absolute;
+                right: 5px;
+                top: 4px;
+            }
+        }
     }
-    hr{
+    .sys-lists {
+        #feed .list-name .icon, #all-list .list-name .icon{
+            margin-top:0px;
+        }
+    }
+    hr {
         margin:10px 0;
     }
 }
@@ -176,22 +316,37 @@ a {
     -khtml-border-radius: 3px;
     border-radius: 3px;
 
+    position:relative;
+
     .detail {
+        height: 120px;
+        overflow: hidden;
         .title {
             h1,h2,h3,h4,h5 {
                 margin-top:0;
             }
             text-align:center;
             a {
-                color:@orange;
+                color:@green;
                 position: relative;
                 font-size:18px;
             }
         }
-        ul li a {
-            white-space: nowrap;
-            overflow:hidden;
-            display:block;
+        ul {
+            li a {
+                white-space: nowrap;
+                overflow:hidden;
+                display:block;
+            }
+        }
+        .gradient {
+            background: url(../img/gradient.png) repeat-x scroll center top transparent;
+            bottom: 0px;
+            height: 30px;
+            position: absolute;
+            right: 0;
+            width: 100%;
+            z-index: 2;
         }
         padding: 18px 20px;
     }
@@ -220,7 +375,7 @@ a {
             font-weight:bold;
             position: relative;
             font-size:18px;
-            color:@orange;
+            color:@green;
             &:hover {
                 text-decoration:none;
             }
@@ -260,16 +415,178 @@ hr.soften {
 
 .avatar {
     margin-right: 10px;
-    .border-radius(64px);
+    .border-radius(50%);
+}
+/* profile */
+#profile {
+    .profile-box {
+        background:url(../img/profile_bg.png) #ddd no-repeat 0px -8px;
+        border-radius:8px;
+        border:1px solid #eee;
+        padding-top:100px;
+
+        .user-data {
+            background:white;
+            border-radius:8px;
+        }
+    }
+    .username {
+        color:white;
+        margin:0;
+        small {
+            color:white;
+            font-size:14px;
+        }
+    }
+    .user-info-box .signature {
+        color:white;
+        margin-top:5px;
+        font-size:14px;
+    }
+    .avatar-box {
+        padding:0px 10px 30px 20px;
+        .avatar {
+            width:128px;
+            height:128px;
+            border:4px solid white;
+            .border-radius(50%);
+            position:absolute;
+        }
+    }
+    .nav {
+        margin-bottom:0;
+        background:#eee;
+        padding-top:5px;
+
+    }
+    #bookmarks.tab-pane {
+        margin-top:0;
+    }
+    .tab-pane {
+        margin:20px 0;
+    }
+    #lists.tab-pane {
+    }
+    #bookmarks.tab-pane {
+        margin:20px;
+        .empty-box {
+            margin-top:20px;
+        }
+        .bookmark-entry-box .avatar {
+        }
+        hr {
+            margin-left:-20px;
+            margin-right:-20px;
+        }
+    }
+    #followers, #following {
+        .list ul {
+
+        }
+    }
+    .about {
+        padding-top:20px;
+        padding-bottom:20px;
+        background: #f8f8f8;
+    }
+}
+.empty-box {
+    border: 3px dotted #ddd;
+    border-radius: 13px;
+    padding:40px 0;
+    background-color:#f8f8f8;
+    p {
+        text-align: center;
+        vertical-align:middle;
+        font-size: 19px;
+        color: #888;
+    }
+}
+.center {
+    text-align:center;
 }
 
-/* search */
 .search {
-    input {
-        border-right:0;
-        border-radius: 4px 0 0 4px;
+}
+/* welcome page */
+body.welcome {
+    padding-top:0px;
+    .logo-box {
+        -webkit-animation:bodyslide 2s ease;
+        margin-top:80px;
+        margin-bottom:30px;
     }
-    button {
-        border-radius: 0px 4px 4px 0;
+    .logo {
+        background:@green; 
+        color:white;
+        display:inline-block;
+        font-size:60px;
+        padding:110px 62px;
+        border:6px solid white;
+        .border-radius(50%);
     }
+    h1.slogan {
+        .emphasize {
+            color: #B5E9E3;
+        }
+    }
+    .features {
+        h1 {
+        }
+    }
+    .extra-big-icon {
+        font-size:200px;
+    }
+    .big-icon {
+        font-size:180px;
+    }
+}
+
+#bookmarklet {
+    cursor:move;
+}
+#preview-box {
+    position: fixed;
+    top: 0;
+    z-index: 10000000;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:white;
+    overflow:auto;
+    .navbar > .navbar-inner{
+        border-radius:0;
+    }
+    .navbar {
+        margin-bottom:0;
+    }
+    #read-box {
+        .article {
+            font-size:16px;
+            line-height: 25px;
+            blockquote {
+                color:gray;
+            }
+        }
+    }
+    #preview {
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+}
+p.lead {
+    a {
+        text-decoration:underline;
+    }
+}
+footer {
+    margin:20px 0;
+}
+
+
+/* Invite */
+.kaleo-invites-sent {
+    list-style:none;
+    @ul.unstyled;
 }
