fix explore page layout issue

--- a/bookmark/templates/bookmark/includes/lists.html
+++ b/bookmark/templates/bookmark/includes/lists.html
@@ -1,10 +1,12 @@
 {% load endless %}
 {% load i18n %}
                 {% if lists %}
+                    <div class="row">
                     {% paginate 15 lists %}
                     {% for list in lists %}
                         {% include 'bookmark/includes/list_box.html' %}
                     {% endfor %}
+                    </div>
                     <div class="pagination">
                         <ul>
                             {% show_pages %}
