--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block body %}
      <div class="row-fluid" id="user-home">
-        <div class="span3 sidebar-width" id="lists">
+        <div class="span2 sidebar-width">
             <div class="sidebar-nav-fixed">
                 <div class="row-fluid">
                     <div class="span4">
@@ -26,6 +26,10 @@
                     </div>
                 </div>
                 <hr>
+                <hr class="shared-lists-ul-sep hide">
+            </div>
+        </div>
+        <div class="span3" id="lists">
                 <div class="sys-lists">
                     <ul class="nav">
                         <li id="feed">
@@ -43,7 +47,6 @@
                         </li>
                     </ul>
                 </div>
-                <hr class="shared-lists-ul-sep hide">
                 <div class="user-lists">
                     <ul class="nav shared-lists-ul hide">
                         <li class="nav-header">{% trans "Shared Lists" %}</li>
@@ -60,9 +63,9 @@
                     <input type="text" name="name" class="list-name" value="">
                     <p><input type="submit" class="btn btn-primary" value="{% trans "Create" %}"></p>
                 </form>
-            </div>
+            
         </div>
-        <div class="span9" id="bookmarks">
+        <div class="span7" id="bookmarks">
         </div>
      </div>
 
@@ -88,7 +91,7 @@
                     <div class="span12 hide confirm-add-bookmark">
                     </div>
                 </div>
-                <div class="row-fluid">
+                <div class="row-fluid list-wrapper">
                     <div class="span12 list">
                         <div class="empty-box hide no-bookmarks">
                             <p>
@@ -286,7 +289,7 @@
                                         <div class="span12">
                                             <% _.each(bookmark.tags.split(" "), function(tag){ %>
                                                 <% if(tag) {%>
-                                                <a class="btn btn-mini tag" href="javascript:;"><%- tag %></a>&nbsp;
+                                                <a class="label tag" href="javascript:;"><%- tag %></a>&nbsp;
                                                 <% } %>
                                             <% })%>
                                         </div>
