--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -1,4 +1,6 @@
 @import "bootstrap.less";
+@import "responsive.less";
+//@import "../flat-ui/less/flat-ui.less";
 @orange: #f47c39;
 @orangeHighlight: spin(@orange, 5%);
 @green: #4FCCBF; /*#42D7B4*/
@@ -10,21 +12,15 @@
 @formActionsBackground: @white;
 @heroUnitBackground: @white;
 body {
-    padding-top:60px;
+    margin-top:0px;
     /* background: url(../img/bg-noise.gif);*/
     background:#F8F8F3;
 }
-.btn {
-    .box-shadow(0 0 0 rgba(0,0,0,0));
-    text-shadow:none;
-    background-image:none;
-    .transition(none);
-    &:hover {
-        .transition(none);
-    }
-}
 .hero-unit {
     border:1px solid #eee;
+}
+a {
+    text-decoration: none;
 }
 textarea,
 input[type="text"],
@@ -49,14 +45,6 @@ input[type="color"],
         .box-shadow(none);
     }
 }
-.btn-primary {
-    .buttonBackground(@orange, @orange);
-    &:hover {
-    .buttonBackground(@orangeHighlight, @orangeHighlight);
-    }
-    border-bottom-color: #bd4a0a;
-    border-bottom-width: 3px;
-}
 .label {
   &-tag           { background-color: @bluegray; }
   &-tag[href]     { background-color: darken(@bluegray, 10%); }
@@ -68,6 +56,24 @@ a {
     }
     color: @black;
 }
+.btn {
+    .box-shadow(0 0 0 rgba(0,0,0,0));
+    text-shadow:none;
+    background-image:none;
+    .transition(none);
+    &:hover {
+        .transition(none);
+    }
+}
+.btn-primary {
+    .buttonBackground(@orange, @orange);
+    &:hover {
+    .buttonBackground(@orangeHighlight, @orangeHighlight);
+    }
+    border-bottom-color: #bd4a0a;
+    border-bottom-width: 3px;
+}
+
 .navbar-fixed-top {
     .navbar-inner {
         border-top: 4px @green solid;
@@ -118,11 +124,25 @@ a {
 
 }
 #user-home #bookmarks {
-    min-height:400px;
     .add-bookmark-form-box {
         input.url {
             height:32px;
             line-height: 16px;
+        }
+    }
+}
+#bookmarks {
+    .paginator {
+        .pagination {
+            margin:0;
+        }
+    }
+    .bookmarks .list-wrapper {
+        position: relative;
+        height: 100%;
+        overflow-x: hidden;
+        .list {
+            position:absolute;
         }
     }
 }
@@ -588,5 +608,4 @@ footer {
 /* Invite */
 .kaleo-invites-sent {
     list-style:none;
-    @ul.unstyled;
 }
