--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -45,6 +45,12 @@ bookmark-app
                 </div>
                 <hr class="sidebar-hr">
                 <ul class="unstyled sidebar-menu">
+                    <li>
+                        <a target="_blank" href="{% url bookmark_explore %}"><i class="icon icon-bolt"></i>{% trans "Explore" %}</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="{% url bookmark_tools %}"><i class="icon icon-wrench"></i>{% trans "Tools" %}</a>
+                    </li>
                     <li><a target="_blank" href="{% url bookmark_profile user.username %}"><i class="icon-home"></i> {% trans "My public page" %}</a></li>
                     <li><a target="_blank" href="{% url account_settings %}"><i class="icon-cog"></i> {% trans "Settings" %}</a></li>
                     <li><a target="_blank" href="{% url bookmark_sync %}"><i class="icon-refresh"></i> {% trans "Sync" %}</a></li>
@@ -58,6 +64,11 @@ bookmark-app
             </div>
         </div>
         <div class="span3" id="lists">
+                <form class="navbar-form search" action="/{{user.username}}/search/">
+                    <div class="input-append">
+                        <input type="text" name="query" class="query"><button type="submit" class="btn"><i class="icon-search"></i></button>
+                    </div>
+                </form>
                 <div class="sys-lists">
                     <ul class="nav">
                         <li id="feed">
