--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -19,39 +19,51 @@ bookmark-app
      <div class="row-fluid" id="user-home">
         <div class="sidebar-width">
             <div class="sidebar-nav-fixed">
-                <hr>
-                <div class="row-fluid">
+                <div class="row-fluid brand-wrapper">
                     <div class="span6">
-                        <a class="brand" href="/"><big>{{ SITE_NAME }}</big></a>
+                        <a class="brand" href="/">{{ SITE_NAME }}</a>
                     </div>
                     <div class="span6">
-                        <ul class="inline brand-menu">
-                            <li><a href="{% url account_logout %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
+                        <ul class="unstyled brand-menu pull-right">
+                            <li class=""><a href="{% url account_logout %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
                         </ul>
                     </div>
                 </div>
                 <hr>
                 <div class="row-fluid">
                     <div class="span4">
-                        <a href="{% url bookmark_profile user %}">
+                        <a href="{% url bookmark_profile user %}" title="{{ user }}">
                             <img class="avatar" alt="{{ user }}" src="{% gravatar_for_email user.email 64 %}&r=r" />
                         </a>
                     </div>
-                    <div class="span8">
-                        <a href="{% url bookmark_profile user %}">
-                            <b>{{ user }}</b>
-                        </a>
-                        <span><b class="text-success">{% points_for_object user %}</b> karma</span>
+                    <div class="span7 info pull-right">
+                        <ul class="unstyled">
+                            <li>
+                            <a href="{% url notifications:mark_all_as_read %}" class="pull-right">
+                                <i class="icon-bell-alt"></i>
+                                {% trans "Notifications" %}
+                            {% if unread_count %}<span class="badge badge-mini badge-success">{{ unread_count }}</span>{% endif %}
+                            </a>
+                            </li>
+                            <li>
+                        <a target="_blank" href="{% url account_settings %}" class="pull-right"><i class="icon-cog"></i> {% trans "Settings" %}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row-fluid username">
+                    <div class="span7">
+                            <a href="{% url bookmark_profile user %}" title="{{ user }}">
+                                <b>{{ user }}</b>
+                            </a>
+                    </div>
+                    <div class="span5 pull-right">
+                        <span class="pull-right"><b class="text-success">{% points_for_object user %}</b> karma</span>
                     </div>
                 </div>
                 <hr class="sidebar-hr">
                 <ul class="unstyled sidebar-menu">
                     <li>
-                        <a href="{% url notifications:mark_all_as_read %}">
-                            <i class="icon-bell-alt"></i>
-                        {% trans "Notifications" %} 
-                        {% if unread_count %}<span class="badge badge-mini badge-success">{{ unread_count }}</span>{% endif %}
-                        </a>
                     </li>
                     <li>
                         <a href="{% url invite_user %}">
@@ -64,7 +76,6 @@ bookmark-app
                         <a target="_blank" href="{% url bookmark_tools %}"><i class="icon icon-wrench"></i>{% trans "Tools" %}</a>
                     </li>
                     <li><a target="_blank" href="{% url bookmark_profile user.username %}"><i class="icon-home"></i> {% trans "My public page" %}</a></li>
-                    <li><a target="_blank" href="{% url account_settings %}"><i class="icon-cog"></i> {% trans "Settings" %}</a></li>
                     <li><a target="_blank" href="{% url bookmark_sync %}"><i class="icon-refresh"></i> {% trans "Sync" %}</a></li>
                     <li><a target="_blank" href="{% url bookmark_import %}"><i class="icon-signin"></i> {% trans "Import" %}</a></li>
                     <li class="divider"></li>
@@ -77,6 +88,7 @@ bookmark-app
             </div>
         </div>
         <div class="" id="lists">
+            <div class="list-wrapper">
                 <form class="navbar-form search" action="/{{user.username}}/search/">
                     <div class="input-append">
                         <input type="text" name="query" class="query span10"><button type="submit" class="btn"><i class="icon-search"></i></button>
@@ -115,7 +127,7 @@ bookmark-app
                     <input type="text" name="name" class="list-name" value="">
                     <p><input type="submit" class="btn btn-primary" value="{% trans "Create" %}"></p>
                 </form>
-            
+            </div>
         </div>
         <div class="" id="bookmarks">
         </div>
