--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -121,7 +121,6 @@ a {
         line-height:22px;
     }
     .brand-menu li {
-        padding:0 4px;
     }
     .brand-wrapper {
         margin-top:6px;
@@ -129,7 +128,6 @@ a {
     .info {
         margin-top:8px;
         ul li {
-            padding: 0 4px;
         }
     }
     .username {
@@ -208,6 +206,9 @@ body.bookmark-app {
 
     .pagination-hr {
         border:none;
+        margin:0px;
+        height:20px;
+
         @shadow: 0 0 6px lighten(@green, 1%);
         .box-shadow(0 0 0 rgba(0,0,0,0));
     }
@@ -226,7 +227,7 @@ body.bookmark-app {
             }
         }
         hr {
-            margin-top:0;
+            margin-top:0px;
         }
     }
 }
