--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -14,8 +14,9 @@ body {
     padding-top:60px;
     /* background: url(../img/bg-noise.gif);*/
     background:#fafafa;
-    font-family: 'Microsoft Yahei', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue',Helvetica, Arial,'Liberation Sans',FreeSans,'Hiragino Sans GB',sans-serif,"Microsoft YaHei","Microsoft JhengHei",STHeiti,MingLiu;
     color:#3b3b3b;
+    text-rendering: optimizelegibility;
 }
 
 h1, h2, h3, h4, h5, h6 {
