--- a/harvest/templates/harvest/bookmarklet.html
+++ b/harvest/templates/harvest/bookmarklet.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="{{ STATIC_URL }}css/bookmarklet.css" type="text/css" media="screen" charset="utf-8">
     </head>
     <body>
-        <div class="modal hide" id="bookmark" tabindex="-1">
+        <div class="modal" id="bookmark" tabindex="-1">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h3 class="page-title">
@@ -59,7 +59,7 @@
                     <div class="row-fluid ">
                         <input type="text" name="tags" class="span12" value="" placeholder="{% trans "Tags: seperate multiple tags with space." %}">
                     </div>
-                    <div class="row-fluid hide">
+                    <div class="row-fluid">
                         <div class="span12 tags-suggestion">
                             <div class="loading">
                                 <img class="spinner" src="{{ post_server }}/site_media/static/img/spinner.gif" />
@@ -122,6 +122,9 @@
                 } else {
                 }
             }).success(function(data){
+                if(!data.meta) {
+                    data = $.parseJSON(data);
+                }
                 if(data.meta.total_count > 0) {
                     var bookmark = data.objects[0];
                     existed_bookmark = bookmark;
@@ -142,6 +145,9 @@
                     withCredentials: true
                 }
             }).success(function(data){
+                if(!data.meta) {
+                    data = $.parseJSON(data);
+                }
                 var select_list_uri = null;
                 if(existed_bookmark) {
                     select_list_uri = existed_bookmark.list;
@@ -229,7 +235,6 @@
                     xhrFields: {
                       withCredentials: true
                     },
-                    async: false,
                     contentType: "application/json",
                     dataType: "application/json"}).complete(function(xhr){
                         var data = $.parseJSON(xhr.responseText);
@@ -267,22 +272,25 @@
             });
 
             // fetch suggested tags
-            //$.getJSON("{{ post_server }}" + "/harvest/tag/?url=" + "{{ data.url }}").success(function(data){
-            //    $('.tags-suggestion .loading').hide();
-            //    for(var i = 0;i< data.length;i++) {
-            //        var $tag = $(" <a href='javascript:;' class='label tag label-success'>" + data[i][0] + "</a> "); 
-            //        $('.tags-suggestion').append($tag).append(" ");
-            //        $tag.click(function(){
-            //            var tag = $(this).text();
-            //            var tags = $('.form [name="tags"]').val();
-            //            if(tags) {
-            //                tags += " ";
-            //            }
-            //            tags += tag
-            //            $('.form [name="tags"]').val(tags);
-            //        });
-            //    }
-            //});
+            $.getJSON("/harvest/tag/?url=" + "{{ data.url }}").success(function(data){
+                $('.tags-suggestion .loading').hide();
+                if(!data.length) {
+                    data = $.parseJSON(data);
+                }
+                for(var i = 0;i< data.length;i++) {
+                    var $tag = $(" <a href='javascript:;' class='label tag label-success'>" + data[i][0] + "</a> "); 
+                    $('.tags-suggestion').append($tag).append(" ");
+                    $tag.click(function(){
+                        var tag = $(this).text();
+                        var tags = $('.form [name="tags"]').val();
+                        if(tags) {
+                            tags += " ";
+                        }
+                        tags += tag
+                        $('.form [name="tags"]').val(tags);
+                    });
+                }
+            });
         </script>
     </body>
 </html>
