add recent list

--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -111,6 +111,12 @@ bookmark-app
                                 </small>
                             </a>
                         </li>
+                        <li id="recent-viewed">
+                            <a class="list-name" href="javascript:;">
+                                <i class="icon icon-time"></i>
+                                {% trans "Recent viewed" %}
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="user-lists scrollable">
