remove label on count

--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -427,7 +427,7 @@ bookmark-app
                                 icon-inbox
                             <% } %>"><% if (list.kind == 3){ %><img class="avatar" src="<%- list.user_avatar %>"><% } %></span>
                         <span class="name-text span10"><%-list.name%></span>
-                        <small class="label label-success count"><%-list.count%></small>
+                        <small class="count"><%-list.count%></small>
                         <div class="clearfix">
                         </div>
                     </span>
