--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -381,6 +381,7 @@ body.bookmark-app {
                 }
             }
             .count {
+                color: #888;
                 position:absolute;
                 right: 5px;
                 top: 4px;
