--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -938,11 +938,12 @@ hr.soften{height:1px;margin:40px 0;background-image:-webkit-linear-gradient(left
 #profile .about{padding-top:20px;padding-bottom:20px;background:#f8f8f8;}
 .empty-box{border:3px dotted #ddd;border-radius:13px;padding:40px 0;background-color:#f8f8f8;}.empty-box p{text-align:center;vertical-align:middle;font-size:19px;color:#888;}
 .center{text-align:center;}
-body.welcome{padding-top:0px;}body.welcome .logo-box{-webkit-animation:bodyslide 2s ease;margin-top:80px;margin-bottom:30px;}
-body.welcome .logo{background:#4fccbf;color:white;display:inline-block;font-size:60px;padding:110px 62px;border:6px solid white;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;}
-body.welcome h1.slogan .emphasize{color:#B5E9E3;}
-body.welcome .extra-big-icon{font-size:200px;}
-body.welcome .big-icon{font-size:180px;}
+body.welcome{padding-top:0px;}body.welcome .banner{height:500px;background:url(../img/banner_bg.jpg);}body.welcome .banner .container{padding-top:60px;}body.welcome .banner .container .slogan{color:white;background-color:rgba(0, 0, 0, 0.7);padding:36px;margin-top:100px;}
+body.welcome_old{padding-top:0px;}body.welcome_old .logo-box{-webkit-animation:bodyslide 2s ease;margin-top:80px;margin-bottom:30px;}
+body.welcome_old .logo{background:#4fccbf;color:white;display:inline-block;font-size:60px;padding:110px 62px;border:6px solid white;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;}
+body.welcome_old h1.slogan .emphasize{color:#B5E9E3;}
+body.welcome_old .extra-big-icon{font-size:200px;}
+body.welcome_old .big-icon{font-size:180px;}
 #bookmarklet{cursor:move;}
 #preview-box{position:fixed;top:0;z-index:10000000;left:0;width:100%;height:100%;background:white;overflow:auto;}#preview-box .navbar>.navbar-inner{border-radius:0;}
 #preview-box .navbar{margin-bottom:0;}
