--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -617,7 +617,24 @@ hr.soften {
 .search {
 }
 /* welcome page */
+
 body.welcome {
+    padding-top:0px;
+    .banner {
+        height:500px;
+        background: url(../img/banner_bg.jpg);
+        .container {
+            padding-top:60px;
+            .slogan {
+                color:white;
+                background-color: rgba(0,0,0,.7);
+                padding:36px;
+                margin-top:100px;
+            }
+        }
+    }
+}
+body.welcome_old {
     padding-top:0px;
     .logo-box {
         -webkit-animation:bodyslide 2s ease;
