--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -78,16 +78,30 @@
     {% block extra_head %}{% endblock %}
 {% endblock %}
 
-{% block footer %}
-    {% include "_footer.html" %}
-{% endblock %}
-
 {% block script_base %}
     <script src="{% block jquery_src %}{% static "pinax/js/jquery.js" %}{% endblock %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "pinax/js/theme.js" %}"></script>
     <script type="text/javascript" src="{% static "js/base.js?v=4" %}" charset="utf-8"></script>
     {% block extra_script %}{% endblock %}
+{% endblock %}
+{% block body_base %}
+    <div class="container">
+        {% include "_messages.html" %}
+        {% block body %}
+        {% endblock %}
+    </div>
+    {% block extra_inner_body%}
+    {% endblock %}
+    {% block footer_base %}
+    <div class="container">
+        <footer>
+            {% block footer %}
+                {% include "_footer.html" %}
+            {% endblock %}
+        </footer>
+    </div>
+    {% endblock %}
 {% endblock %}
 {% block extra_body_base %}
     <div class="hide">
